Fixing blue box mobile spacing.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -433,6 +433,12 @@ svg {
   height: 100%;
 }
 
+@media screen and (max-width: 900px) {
+  .blue-box-col.col-xs-12 {
+    margin-bottom: $padding;
+  }
+}
+
 .color-blue {
   color: $blue;
 }
